@@ -1,19 +1,9 @@
 package dev.erst.gridgrind.contract.catalog;
 
-import com.fasterxml.jackson.annotation.JsonIgnore;
-import com.fasterxml.jackson.annotation.JsonSubTypes;
-import com.fasterxml.jackson.annotation.JsonTypeInfo;
-import dev.erst.gridgrind.contract.action.MutationAction;
-import dev.erst.gridgrind.contract.assertion.Assertion;
 import dev.erst.gridgrind.contract.catalog.gather.CatalogDuplicateFailures;
-import dev.erst.gridgrind.contract.catalog.gather.CatalogFieldMetadataSupport;
-import dev.erst.gridgrind.contract.catalog.gather.CatalogGatherers;
 import dev.erst.gridgrind.contract.dto.GridGrindProtocolVersion;
 import dev.erst.gridgrind.contract.dto.WorkbookPlan;
-import dev.erst.gridgrind.contract.query.InspectionQuery;
 import dev.erst.gridgrind.contract.step.WorkbookStep;
-import dev.erst.gridgrind.contract.step.WorkbookStepTargeting;
-import java.lang.reflect.RecordComponent;
 import java.util.Arrays;
 import java.util.LinkedHashMap;
 import java.util.List;
@@ -40,7 +30,7 @@ public final class GridGrindProtocolCatalog {
           dev.erst.gridgrind.contract.dto.FormulaEnvironmentInput.empty(),
           List.of());
   private static final TypeEntry REQUEST_TYPE =
-      typeEntry(
+      CatalogTypeEntryFactory.typeEntry(
           WorkbookPlan.class,
           "WorkbookPlan",
           "Complete GridGrind plan for workbook source, execution policy, formula environment,"
@@ -52,7 +42,6 @@ public final class GridGrindProtocolCatalog {
               "execution",
               "formulaEnvironment",
               "steps"));
-  private static final CliSurface CLI_SURFACE = GridGrindProtocolCatalogCliSurface.CLI_SURFACE;
   private static final List<CatalogTypeDescriptor> STEP_TYPES =
       GridGrindProtocolCatalogTypeDescriptors.STEP_TYPES;
   private static final List<CatalogTypeDescriptor> SOURCE_TYPES =
@@ -82,16 +71,6 @@ public final class GridGrindProtocolCatalog {
   /** Returns the machine-readable protocol catalog emitted by the CLI discovery command. */
   public static Catalog catalog() {
     return CATALOG;
-  }
-
-  /** Returns the ordered built-in example set exposed by the CLI and catalog. */
-  public static List<GridGrindShippedExamples.ShippedExample> shippedExamples() {
-    return GridGrindShippedExamples.examples();
-  }
-
-  /** Returns one built-in example by its stable discovery id, or empty when unknown. */
-  public static Optional<GridGrindShippedExamples.ShippedExample> exampleFor(String id) {
-    return GridGrindShippedExamples.find(id);
   }
 
   /**
@@ -143,12 +122,10 @@ public final class GridGrindProtocolCatalog {
 
   private static Catalog buildCatalog() {
     validateFieldShapeGroupMappings();
-    validateCoverage(WorkbookPlan.WorkbookSource.class, SOURCE_TYPES);
-    validateCoverage(WorkbookPlan.WorkbookPersistence.class, PERSISTENCE_TYPES);
-    validateCoverage(WorkbookStep.class, STEP_TYPES);
-    validateCoverage(MutationAction.class, MUTATION_ACTION_TYPES);
-    validateCoverage(Assertion.class, ASSERTION_TYPES);
-    validateCoverage(InspectionQuery.class, INSPECTION_QUERY_TYPES);
+    for (CatalogTopLevelTypeDescriptorGroup group :
+        GridGrindProtocolCatalogTypeDescriptors.TOP_LEVEL_GROUPS) {
+      validateCoverage(group.sealedType(), group.typeDescriptors());
+    }
     for (CatalogNestedTypeDescriptor nestedTypeGroup : NESTED_TYPE_GROUPS) {
       validateCoverage(nestedTypeGroup.sealedType(), nestedTypeGroup.typeDescriptors());
     }
@@ -156,8 +133,6 @@ public final class GridGrindProtocolCatalog {
         GridGrindProtocolVersion.current(),
         DISCRIMINATOR_FIELD,
         REQUEST_TYPE,
-        CLI_SURFACE,
-        GridGrindShippedExamples.catalogEntries(),
         publicEntries(SOURCE_TYPES),
         publicEntries(PERSISTENCE_TYPES),
         publicEntries(STEP_TYPES),
@@ -181,110 +156,6 @@ public final class GridGrindProtocolCatalog {
 
   private static List<TypeEntry> publicEntries(List<CatalogTypeDescriptor> descriptors) {
     return descriptors.stream().map(CatalogTypeDescriptor::typeEntry).toList();
-  }
-
-  static CatalogNestedTypeDescriptor nestedTypeGroup(
-      String group, Class<?> sealedType, List<CatalogTypeDescriptor> typeDescriptors) {
-    return new CatalogNestedTypeDescriptor(
-        group, discriminatorFieldFor(sealedType), sealedType, typeDescriptors);
-  }
-
-  static CatalogPlainTypeDescriptor plainTypeDescriptor(
-      String group,
-      Class<? extends Record> recordType,
-      String id,
-      String summary,
-      List<String> optionalFields) {
-    return new CatalogPlainTypeDescriptor(
-        group, recordType, typeEntry(recordType, id, summary, optionalFields));
-  }
-
-  static CatalogTypeDescriptor descriptor(
-      Class<? extends Record> recordType, String id, String summary, String... optionalFields) {
-    return new CatalogTypeDescriptor(
-        recordType, typeEntry(recordType, id, summary, List.of(optionalFields)));
-  }
-
-  private static TypeEntry typeEntry(
-      Class<? extends Record> recordType, String id, String summary, List<String> optionalFields) {
-    Optional<WorkbookStepTargeting.TargetSurface> targetSurface =
-        TypeEntryTargetingSupport.optionalTargetSurfaceFor(recordType);
-    return new TypeEntry(
-        canonicalTypeId(recordType, id),
-        summary,
-        fieldEntries(recordType, optionalFields),
-        TypeEntryTargetingSupport.targetSelectorEntries(targetSurface),
-        targetSurface.flatMap(WorkbookStepTargeting.TargetSurface::rule).orElse(null));
-  }
-
-  @SuppressWarnings("unchecked")
-  private static String canonicalTypeId(Class<? extends Record> recordType, String suppliedId) {
-    if (WorkbookPlan.WorkbookSource.class.isAssignableFrom(recordType)) {
-      return requireMatchingCatalogId(
-          suppliedId,
-          GridGrindProtocolTypeNames.workbookSourceTypeName(
-              (Class<? extends WorkbookPlan.WorkbookSource>) recordType),
-          recordType);
-    }
-    if (WorkbookPlan.WorkbookPersistence.class.isAssignableFrom(recordType)) {
-      return requireMatchingCatalogId(
-          suppliedId,
-          GridGrindProtocolTypeNames.workbookPersistenceTypeName(
-              (Class<? extends WorkbookPlan.WorkbookPersistence>) recordType),
-          recordType);
-    }
-    if (WorkbookStep.class.isAssignableFrom(recordType)) {
-      return requireMatchingCatalogId(
-          suppliedId,
-          GridGrindProtocolTypeNames.workbookStepTypeName(
-              (Class<? extends WorkbookStep>) recordType),
-          recordType);
-    }
-    if (MutationAction.class.isAssignableFrom(recordType)) {
-      return requireMatchingCatalogId(
-          suppliedId,
-          GridGrindProtocolTypeNames.mutationActionTypeName(
-              (Class<? extends MutationAction>) recordType),
-          recordType);
-    }
-    if (Assertion.class.isAssignableFrom(recordType)) {
-      return requireMatchingCatalogId(
-          suppliedId,
-          GridGrindProtocolTypeNames.assertionTypeName((Class<? extends Assertion>) recordType),
-          recordType);
-    }
-    if (InspectionQuery.class.isAssignableFrom(recordType)) {
-      return requireMatchingCatalogId(
-          suppliedId,
-          GridGrindProtocolTypeNames.inspectionQueryTypeName(
-              (Class<? extends InspectionQuery>) recordType),
-          recordType);
-    }
-    return suppliedId;
-  }
-
-  static String requireMatchingCatalogId(
-      String suppliedId, String canonicalId, Class<? extends Record> recordType) {
-    if (!suppliedId.equals(canonicalId)) {
-      throw new IllegalStateException(
-          "Catalog type id mismatch for "
-              + recordType.getName()
-              + ": supplied="
-              + suppliedId
-              + ", canonical="
-              + canonicalId);
-    }
-    return canonicalId;
-  }
-
-  private static List<FieldEntry> fieldEntries(
-      Class<? extends Record> recordType, List<String> optionalFields) {
-    requiredFields(recordType, optionalFields);
-    Set<String> optionalFieldSet = Set.copyOf(optionalFields);
-    return Arrays.stream(recordType.getRecordComponents())
-        .filter(GridGrindProtocolCatalog::isCatalogVisible)
-        .gather(CatalogGatherers.expandFieldsWithMetadata(optionalFieldSet))
-        .toList();
   }
 
   private static void validateFieldShapeGroupMappings() {
@@ -333,33 +204,6 @@ public final class GridGrindProtocolCatalog {
     }
   }
 
-  /** Returns the required record fields after removing the explicitly optional ones. */
-  static List<String> requiredFields(
-      Class<? extends Record> recordType, List<String> optionalFields) {
-    List<String> recordFields = recordFields(recordType);
-    for (String optionalField : optionalFields) {
-      if (!recordFields.contains(optionalField)) {
-        throw new IllegalStateException(
-            "Catalog optional field '%s' does not exist on %s"
-                .formatted(optionalField, recordType.getName()));
-      }
-    }
-    return recordFields.stream().filter(field -> !optionalFields.contains(field)).toList();
-  }
-
-  private static List<String> recordFields(Class<? extends Record> recordType) {
-    return Arrays.stream(recordType.getRecordComponents())
-        .filter(GridGrindProtocolCatalog::isCatalogVisible)
-        .map(RecordComponent::getName)
-        .toList();
-  }
-
-  private static boolean isCatalogVisible(RecordComponent component) {
-    return !component.isAnnotationPresent(CatalogIgnored.class)
-        && !component.getAccessor().isAnnotationPresent(CatalogIgnored.class)
-        && !component.getAccessor().isAnnotationPresent(JsonIgnore.class);
-  }
-
   private static void validateCoverage(
       Class<?> sealedType, List<CatalogTypeDescriptor> descriptors) {
     validateCoverage(
@@ -388,18 +232,12 @@ public final class GridGrindProtocolCatalog {
       }
       return;
     }
-    discriminatorFieldFor(sealedType);
-    JsonSubTypes jsonSubTypes = sealedType.getAnnotation(JsonSubTypes.class);
-    if (jsonSubTypes == null) {
-      throw new IllegalStateException(
-          "Catalog coverage requires @JsonSubTypes on " + sealedType.getName());
-    }
-
+    CatalogTypeEntryFactory.discriminatorFieldFor(sealedType);
     Map<Class<?>, String> annotationIds =
         toOrderedMap(
-            Arrays.asList(jsonSubTypes.value()),
-            JsonSubTypes.Type::value,
-            JsonSubTypes.Type::name,
+            List.copyOf(ProtocolTypeMetadataSupport.typeIdsByClass(sealedType).entrySet()),
+            Map.Entry::getKey,
+            Map.Entry::getValue,
             "annotation subtype");
 
     for (Class<?> recordType : catalogIds.keySet()) {
@@ -431,16 +269,6 @@ public final class GridGrindProtocolCatalog {
                 + catalogId);
       }
     }
-  }
-
-  private static String discriminatorFieldFor(Class<?> sealedType) {
-    JsonTypeInfo jsonTypeInfo = sealedType.getAnnotation(JsonTypeInfo.class);
-    if (jsonTypeInfo == null || jsonTypeInfo.property().isBlank()) {
-      throw new IllegalStateException(
-          "Catalog coverage requires %s to declare a non-blank @JsonTypeInfo property"
-              .formatted(sealedType.getName()));
-    }
-    return jsonTypeInfo.property();
   }
 
   @SuppressWarnings("PMD.UseConcurrentHashMap")
